--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,17 +3,16 @@ name: CI
 on: [push]
 
 jobs:
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
       
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v1
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: 17
       
       - name: Cache the Maven packages to speed up build
         uses: actions/cache@v1
@@ -21,7 +20,35 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+
+      - name: Build and test project with Maven
+        run: mvn -B package --file pom.xml
   
+  publish-job:
+      runs-on: ubuntu-latest
+      needs: [build_and_test]
+      steps:
+        - uses: actions/checkout@v2
+        - uses: actions/setup-java@v1
+          with:
+            java-version: 17
+        - run: mvn -B package --file pom.xml -DskipTests
+        - run: mkdir staging && cp target/*jar-with-dependencies.jar staging
+        - uses: actions/upload-artifact@v1
+          with:
+            name: Package
+            path: staging
+  
+  build-docker-image:
+    name: Publish to Docker Hub
+    runs-on: ubuntu-latest
+    needs: [build_and_test]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build Container image
+        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
+      - name: Publish Docker image
+        run: docker push ${{ secrets.DOCKER_REPO }}
