--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,15 @@ jobs:
       - uses: actions/checkout@v2
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build Container image
-        run: export DOCKER_CLI_EXPERIMENTAL=enabled; docker buildx create --use; docker buildx build --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKER_REPO }}:latest .
-      - name: Publish Docker image
+      - name: Build Container image (amd64)
+        run: docker buildx create --use; docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKER_REPO }}:amd64 .
+      - name: Publish Docker image (amd64)
         run: docker push ${{ secrets.DOCKER_REPO }}
+      - name: Build Container image (arm64)
+        run: docker buildx build --platform linux/arm64 -t ${{ secrets.DOCKER_REPO }}:arm64 .
+      - name: Publish Docker image (arm64)
+        run: docker push ${{ secrets.DOCKER_REPO }}
+      - name: Create manifest
+        run: docker manifest create ${{ secrets.DOCKER_REPO }}:latest ${{ secrets.DOCKER_REPO }}:amd64 ${{ secrets.DOCKER_REPO }}:arm64
+      - name: Push manifest
+        run: docker manifest push ${{ secrets.DOCKER_REPO }}:latest
