--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,5 +49,5 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push image
-        run: docker buildx create --use; docker buildx build --push --platform linux/arm64/v8,linux/amd64 --tag ${{ secrets.DOCKER_PASSWORD }} .
+        run: docker buildx create --use; docker buildx build --push --platform linux/arm64/v8,linux/amd64 --tag ${{ secrets.DOCKER_REPO }}:latest .
         
