--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,14 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push image
         run: docker buildx create --use; docker buildx build --push --platform linux/arm64/v8,linux/amd64 --tag ${{ secrets.DOCKER_REPO }}:latest .
-        
+  
+  deploy:
+    name: Redeploy - Webhook call
+    runs-on: ubuntu-latest
+    needs: [build-docker-image]
+    steps:
+      - name: Deploy docker container webhook
+        uses: joelwmale/webhook-action@master
+        env:
+          WEBHOOK_URL: ${{ secrets.DEPLOY_WEBHOOK_URL  }}
+          data: "{ 'myField': 'blahblah'}"
