--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
     name: Publish to Docker Hub
     runs-on: ubuntu-latest
     needs: [build_and_test]
-
+    
     steps:
       - uses: actions/checkout@v2
       - name: Login to Docker Hub
@@ -41,7 +41,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-docker-image]
     steps:
-      - name: Deploy docker container webhook
-        uses: joelwmale/webhook-action@master
-        env:
-          WEBHOOK_URL: ${{ secrets.DEPLOY_WEBHOOK_URL  }}
+      - name: Curl the redeploy webhook
+        run: curl -I ${{ secrets.DEPLOY_WEBHOOK_URL }}
