--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8080
+server.ssl.enabled=false
 
+# SSL
+server.ssl.key-store=classpath:certs/cert.pfx
+server.ssl.key-store-password=123456
+
+# JKS or PKCS12
+server.ssl.keyStoreType=PKCS12
