--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,28 +18,16 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-m2-${{ hashFiles('app/**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
       - name: Build and test project with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B package --file app/pom.xml
 
-  build-docker-image:
-    name: Publish to Docker Hub
-    runs-on: ubuntu-latest
-    needs: [build_and_test]
-    
-    steps:
-      - uses: actions/checkout@v2
-      - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push image
-        run: docker buildx create --use; docker buildx build --push --platform linux/arm64/v8,linux/amd64 --tag ${{ secrets.DOCKER_REPO }}:latest .
-  
-  deploy:
+  deploy-the-webserver:
     name: Redeploy - Webhook call
     runs-on: ubuntu-latest
-    needs: [build-docker-image]
+    needs: [build_and_test]
     steps:
       - name: Sleep for 30 seconds
         run: sleep 30s
