Add dependicy of prev containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    depends_on:
+      - "git"
+      - "app"
     networks:
       - app-network
   
